--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -6,7 +6,7 @@
     }
 
     .navbar {
-        @apply bg-gray-200 flex flex-col gap-10 px-12 py-8 items-center h-screen w-auto;
+        @apply bg-gray-200 flex flex-col gap-10 px-10 py-8 items-center h-screen w-[250px] fixed;
     }
 
     .navbar-list {
@@ -30,6 +30,6 @@
     }
 
     .index-view {
-        @apply flex flex-col bg-gray-100 p-10 w-full gap-5;
+        @apply flex flex-col bg-gray-100 p-10 w-full gap-5 ml-[250px] h-screen;
     }
 }
